Ingress-config.yml


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2021-03-14T13:24:01Z"
  generation: 1
  name: ingress-wear-watch
  namespace: app-space
  resourceVersion: "1022"
  selfLink: /apis/extensions/v1beta1/namespaces/app-space/ingresses/ingress-wear-watch
  uid: c6f66114-b34b-4fd2-a024-6e9fac12fd58
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 8080
        path: /wear
        pathType: ImplementationSpecific
      - backend:
          serviceName: video-service
          servicePort: 8080
        path: /watch
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - {}
